# tapo-care-backup

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: tapo_care_watch.py
src/tapo_care_backup/: __init__.py  api.py  cli.py  config.py  crypto.py  monitor.py  region.py  signing.py  time_window.py  video_index.py
tests/: test_api.py  test_config.py  test_crypto.py  test_monitor.py  test_region.py  test_signing.py  test_time_window.py  test_video_index.py  test_watch_script.py
