[project]
name = "tapo-care-backup"
version = "0.1.0"
description = "Personal CLI for backing up Tapo Care cloud recordings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kan Ninomiya" }]
dependencies = [
  "requests>=2.32.0",
  "pycryptodome>=3.20.0",
]

[project.scripts]
tapo-care-backup = "tapo_care_backup.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "requests-mock>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapo_care_backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
